2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Update generation of TikZ code for edges a tiny bit.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Generate edge code so that options and directions are applied properly.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add missing copyrights.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Remove a number of node:getEdges() and edge:getNodes() occurrences.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Rework edge TikZ code generation. Add table.map().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Store node edges in an array instead of a dictionary.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Store edge nodes in an array. Make table helpers more consistent.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Store nodes in an array rather than a dictionary. Update my algorithms.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add positioning helpers. Add table.count_pairs(). Update spring algo.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Update coding style document.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add CODING_STYLE document. Refactor spring algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add table.update_values() and table.combine().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Fix issues/breakage in the previous commit.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add table and iter helpers. Move table.copy() to the table helpers.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add naivetree algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add Edge:getOption(), Edge:setOption() and Edge:mergeOptions().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Use resolvers instead of the kpse library. Add missing vector file
	entry.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add spring and wetherelltree algorithms and the Vector class.

2011-04-30  Christian Feuersaenger <ludewich@users.sourceforge.net>
