@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Move table.merge() to the table helpers, make it more flexible.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Update generation of TikZ code for edges a tiny bit.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
